// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/28/2010
	r92 [Jobbie]
	* Fixed a mistake in calculation for Clusterbomb skill.
	* Fixed a missing case of Job Id's in pc_isriding.
	* Corrected the behavior of Reflect Shield and Reflect Damage when used vice versa.

03/26/2010
	r291 [Jobbie]
	* Fixed missing mob_chat_db.txt

03/25/2010
	r290 [Jobbie]
	* Baby Rune, Baby Guard, Baby Ranger and Baby Mechanic is now accessible mounting. Follow up r282

	r289 [Rytech]
	*Database updates.....
	-Added Sorcerer's point items that are used for their summon skills.
	-Added skill_db and skill_require_db entrys for more Sorcerer skills, however they have no ID yet.
	-Updated Sura skill requirements.
	-Updated Sura skill trees.
	*Source Updates.....
	-Added job entrys for mounts in char.c
	-Added tons of new status tags and ID's to status.h

	r288 [Jobbie]
	* Added new SC_*'s used by items 12429 to 12434.
	- These items uses its own sc together with its own status icon to match official servers implementation.
	* Fix typo in changelog.

	r287 [Jobbie]
	* Important merged up of eAthena SVN update from rev14268-71.

	r286 [Jobbie]
	* Updated some sp cost in Sorcerer skills.
	* Crystalize status must be ended when hitted by fire element.
	* Slight cleanup in status.c

	r284 [pakpil]
	* Fixed a mistake in PACKETVER that affec to to clif_displayexp. Sorry.
	- This was caussing dead mobs don't dessapear correclty in clients oldest than 2009-11-10aRagexeRE.
	* Added LG_CANNONSPEAR skill. Still need some info.
	* Fixed LG_REFLECTDAMAGE that shouldn't reduce damage reflected.	

	r283 [Rytech]
	*Small fix in the skill_db.

03/24/2010
	r282 [Rytech]
	*Added baby mount support to the job system.
	-The mounts wont be accessable until their fully coded in the needed area's in the source.

	r281 [pakpil]
	* Fixed a mistake in CR_REFLECSHIELD and LG_REFLECTDAMAGE. Follow up r280.

03/23/2010
	r280 [pakpil]