@@ -1242,43 +1242,43 @@
 //-- WL_WHITEIMPRISON
 2201,0,0,4000,0,20000,5000
 //-- WL_SOULEXPANSION
-2202,3000,500,0,0,0,0
+2202,1500,500,0,0,0,0
 //-- WL_FROSTMISTY
-2203,2000,2000,8000,0,20000,0
+2203,2000,2000,8000,0,10000,0
 //-- WL_JACKFROST
 2204,2500,2000,0,0,20000,0
 //-- WL_MARSHOFABYSS
-2205,4000,1000,0,0,5000:10000:15000:20000:25000,0
+2205,600,1000,2500:3000:3500:4000:4500,0,22000,0
 //-- WL_RECOGNIZEDSPELL
 2206,2000,0,60000,0,20000:30000:40000:50000:60000,0
-//-- WL_SIENNAEXECRATE	-- Missing: Cast time, delay, cooldown
-2207,1000:2000:3000:4000:5000,0,0,0,6000:9000:12000:15000:18000,0
+//-- WL_SIENNAEXECRATE	-- Missing: cooldown
+2207,2000,2000,0,0,6000:9000:12000:15000:18000,0
 //-- WL_STASIS
-2209,5000,0,30000,0,10000:15000:20000:25000:30000,1000
+2209,4000,0,180000:190000:200000:210000:220000,0,10000:15000:20000:25000:30000,1000
 //-- WL_DRAINLIFE
-2210,5000,0,10000,0,0,0
+2210,4000,0,2000,0,0,0
 //-- WL_CRIMSONROCK
-2211,8000,2000,5000,0,3000:4000:5000:6000:7000,0
+2211,6000,2000,5000,0,3000:4000:5000:6000:7000,0
 //-- WL_HELLINFERNO
-2212,5000,0,0,0,25000,0
+2212,5000,1000,1000,0,5000:10000:15000:20000:25000,0
 //-- WL_COMET -- Missing: Duration
-2213,13000,5000,180000,0,100,20000
+2213,11000:12500:14000:15500:17000,5000,180000,0,100,20000
 //-- WL_CHAINLIGHTNING
-2214,5000,0,0,0,1000,0
+2214,3500:4000:4500:5000:5500,3000,0,0,1000,0
 //-- WL_EARTHSTRAIN
-2216,5000:6000:7000:8000:9000,0,10000,1500,500,10000:20000:30000:40000:50000
-//-- WL_TETRAVORTEX -- Missing: Cast time, delay, duration, cooldown
-2217,8000,3000,0,0,20000,0
+2216,3000:4000:5000:6000:7000,1000,10000,1500,500,10000:20000:30000:40000:50000
+//-- WL_TETRAVORTEX -- Missing: duration
+2217,6000:7000:8000:9000:10000,3000,15000,0,20000,0
 //-- WL_SUMMONFB
-2222,3000,0,0,0,30000:40000:50000:60000:70000,0
+2222,2000,0,0,0,30000:40000:50000:60000:70000,0
 //-- WL_SUMMONBL
-2223,3000,0,0,0,30000:40000:50000:60000:70000,0
+2223,2000,0,0,0,30000:40000:50000:60000:70000,0
 //-- WL_SUMMONWB
-2224,3000,0,0,0,30000:40000:50000:60000:70000,0
+2224,2000,0,0,0,30000:40000:50000:60000:70000,0
 //-- WL_SUMMONSTONE
-2229,3000,0,0,0,30000:40000:50000:60000:70000,0
+2229,2000,0,0,0,30000:40000:50000:60000:70000,0
 //-- WL_READING_SB
-2231,5000,0,0,0,30000,0
+2231,4500,300,5000,0,30000,0
 //==========================================
 
 //===== Ranger =============================
